--- a/rann-kutch-taxi-main/.github/workflows/main.yml
+++ b/rann-kutch-taxi-main/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         php-version: '8.2'
         extensions: mbstring, xml, zip
 
-    - name: Install Dependencies
+    - name: Install Dependency
       run: composer install --prefer-dist --no-progress
     
     - name: Start php server
