--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,18 +67,9 @@ jobs:
         extensions: mbstring, xml, zip
 
     - name: Start php server
-      run: |
-        Start-Process php -ArgumentList '-S', 'localhost:8000'
+      run: php -S localhost:8000 main.php
       shell: pwsh
     
-    - name: verify server is running 
-      run: |
-        $response = Invoke-WebRequest -Uri "http://localhost:8000" -UseBasicParsing
-        if ($response.StatusCode -ne 200) {
-          throw "Server is not responding correctly"
-        }
-      shell: pwsh
-
     - name: Notify  if builds
       if: failure()
       run: echo "❌ Deploy failed!"
