--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           php-version: '8.2'
           extensions: mbstring, xml, bcmath, intl, pdo_mysql, zip, curl, gd
+          tools: composer
           coverage: none
 
       # ✅ Cache Composer dependencies for faster builds
